--- a/soulpicks-theme/src/main/res/values-night/themes.xml
+++ b/soulpicks-theme/src/main/res/values-night/themes.xml
@@ -18,18 +18,22 @@
     <!--Top level DayNight theme to be used in AndroidManifest.xml-->
     <style name="Theme.Soulpicks" parent="Base.Theme.Soulpicks">
         <!--Material color attributes (dark theme) -->
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryVariant">@color/primaryVariant</item>
-        <item name="colorSecondary">@color/secondary</item>
-        <item name="colorSecondaryVariant">@color/secondaryVariant</item>
+        <item name="colorPrimary">@color/primary400</item>
+        <item name="colorPrimaryVariant">@color/primary400</item>
+        <item name="colorSecondary">@color/primary400</item>
+        <item name="colorSecondaryVariant">@color/primary400</item>
         <item name="android:colorBackground">@color/black</item>
-        <item name="colorSurface">@color/black</item>
+        <item name="colorSurface">@color/surfaceDark</item>
         <item name="colorError">@color/scarlet</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/onSurfaceDark</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="colorOnBackground">@color/white</item>
-        <item name="colorOnSurface">@color/white</item>
+        <item name="colorOnBackground">@color/onSurfaceDark</item>
+        <item name="colorOnSurface">@color/onSurfaceDark</item>
         <item name="colorOnError">@color/black</item>
+
+        <item name="bottomNavTextColor">@color/gray</item>
+        <item name="chipHighlightColor">@color/gray</item>
+
         <item name="android:windowLightStatusBar" tools:targetApi="m">false</item>
         <item name="android:windowLightNavigationBar" tools:ignore="NewApi">false</item>
     </style>
